<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_Home"
            android:icon="@drawable/ic_home"
            android:title="@string/Home" />
        <item
            android:id="@+id/nav_Blog"
            android:icon="@drawable/ic_blog"
            android:title="@string/Blog" />
        <item
            android:id="@+id/nav_Books"
            android:icon="@drawable/ic_book"
            android:title="@string/Book" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_user_profile"
            android:title="Profile" />
    </group>
    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
