<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:id="@+id/llSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical">


        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            android:drawablePadding="16dp"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:nextFocusForward="@+id/editSignUpPassword"
            android:paddingBottom="4dp"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textColorLink="@android:color/holo_orange_light"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            android:drawablePadding="16dp"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingBottom="6dp"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textColorLink="@android:color/holo_orange_light"
            android:textSize="18sp" />


        <Button
            android:id="@+id/btnSignin"
            android:layout_width="260dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvelse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="260dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </LinearLayout>

</ScrollView>
